<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    	xmlns:android="http://schemas.android.com/apk/res/android" 
    	xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content"  
        android:orientation="horizontal" >
        
    <LinearLayout 
        android:layout_width="fill_parent"  
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:focusable="true" 
		android:focusableInTouchMode="true" 
        android:orientation="horizontal">
        
          <EditText
       			android:layout_width="fill_parent"
        		android:layout_height="fill_parent"
        		android:id="@+id/text_send"
        		android:layout_marginTop="5dp"
        		android:layout_marginLeft="10dp"
        		android:layout_marginBottom="5dp"
        		android:text="@string/txt_readme_nothing"
        		android:maxLines="2"
        		android:layout_weight="1"
        		android:background="@drawable/frame_bg" />
          
          <CheckBox 
    				android:id="@+id/cb_send_hex"
     				android:layout_width="fill_parent" 
      				android:layout_height="wrap_content"
     				android:checked="false" 
     				android:textColor="#000000"
     				android:layout_marginTop="10dp"
     				android:layout_marginLeft="10dp"
     				android:layout_marginBottom="5dp"
     				android:layout_weight="7"
     				android:textStyle="bold"
	    			android:text="@string/txt_d_set_hex"/>
       		
       </LinearLayout>
       		<Button   
            		android:id="@+id/button_send"  
            		android:layout_width="fill_parent"  
            		android:layout_height="wrap_content" 
            		android:textColor="#ff0000" 
            		android:textStyle="bold"
            		android:layout_marginTop="5dp"
            		android:layout_marginLeft="5dp"
            		android:layout_marginRight="5dp"
            		android:textSize="20sp"
            		android:layout_weight="6"
            		android:text="@string/button_send"/> 
          
       </LinearLayout>   