<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/gpio_setting"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <!-- 1 Group -->
    <LinearLayout
        	android:layout_width="fill_parent"  
        	android:layout_height="wrap_content" 
        	android:id="@+id/line_dg_1" 
        	android:orientation="horizontal" >  
   		    <TextView
       			android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:textSize="16sp"
        		android:layout_weight="2"
        		android:textColor="#ff0000"
        		android:textStyle="bold"
        		android:layout_marginLeft="20dp"
        		android:text="@string/txt_dg_group"/>
           	<Spinner    
       			android:id="@+id/dg_gpio_group"    
       			android:layout_width="fill_parent"    
       			android:layout_height="wrap_content"
       			android:layout_weight="1"
       			android:layout_marginLeft="10dp"
       			android:entries="@array/gpio_group">
   			</Spinner>
   	</LinearLayout>
   	
    <!-- 2 Group -->
    <LinearLayout
        	android:layout_width="fill_parent"  
        	android:layout_height="wrap_content" 
        	android:id="@+id/line_dg_2" 
        	android:orientation="horizontal" >  
   		<TextView
       			android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:textSize="16sp"
        		android:textColor="#ff0000"
        		android:textStyle="bold"
        		android:layout_weight="2"
        		android:layout_marginLeft="20dp"
       			android:text="@string/txt_dg_num"/>
           	<Spinner    
       			android:id="@+id/dg_gpio_num"    
       			android:layout_width="fill_parent"    
       			android:layout_height="wrap_content"
       			android:layout_marginLeft="10dp"
       			android:layout_weight="1"
       			android:entries="@array/gpio_num">
   			</Spinner>
   	</LinearLayout>
   	
    <!-- 3 Group -->
    <LinearLayout
        	android:layout_width="fill_parent"  
        	android:layout_height="wrap_content" 
        	android:id="@+id/line_dg_3" 
        	android:orientation="horizontal" >  
   		<TextView
       			android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:textSize="16sp"
        		android:textColor="#ff0000"
        		android:layout_weight="2"
        		android:textStyle="bold"
        		android:layout_marginLeft="20dp"
       			android:text="@string/txt_dg_state"/>
           	<Spinner    
       			android:id="@+id/dg_gpio_operate"    
       			android:layout_width="fill_parent"    
       			android:layout_height="wrap_content"
       			android:layout_weight="1"
       			android:layout_marginLeft="10dp"
       			android:entries="@array/gpio_operate">
   			</Spinner>
   	</LinearLayout>

</LinearLayout>